# Crescendo

./: CMakeLists.txt  game.cpp  game.hpp  state.hpp
